[package]
name = "singbox-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web 框架与异步运行时
axum = "0.7.5"
tokio = { version = "1.38", features = ["full"] }

# 序列化与反序列化（支持 JSON 和 TOML）
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 异步 HTTP 客户端（用于无缝反向代理伪装网站）
reqwest = { version = "0.11", features = ["json", "stream"] }
bytes = "1.6"
